made 'my bus' button and removed 'children' button, updated driver profile fields, creayed a button in driver profile page

--- a/app/i18n/translations/en.json
+++ b/app/i18n/translations/en.json
@@ -14,7 +14,9 @@
     "address": "Address",
     "holidays": "Holidays",
     "events": "Events",
-    "reason": "Reason"
+    "reason": "Reason",
+    "busNo":"Bus Number",
+    "schoolName":"School Name"
   },
   "home": {
     "track": "Track",
@@ -25,7 +27,8 @@
     "holidayList": "Holiday list",
     "applyLeave": "Apply Leave",
     "busArrivalMsg": "will arrive in 10 mts",
-    "trips": " Trip History"
+    "trips": " Trip History",
+    "myBus":"My Bus"
   },
   "track": {
     "title": "Bus Track",
@@ -39,6 +42,9 @@
   },
   "children": {
     "title": "Children"
+  },
+  "myBus":{
+    "title": "My Bus"
   },
   "childProfile": {
     "title": "Children profile",
@@ -61,7 +67,9 @@
     "admissionDate": "Date of Admission",
     "admissionNum": "Admission Number",
     "rollNumber": "Roll Number",
-    "dob": "Date of Birth"
+    "dob": "Date of Birth",
+    "schoolName":"School Name",
+    "busNo":"Bus Number"
   },
   "profile": {
     "details": "My Details"
