got the routes when clicking the bus pods

--- a/app/i18n/translations/en.json
+++ b/app/i18n/translations/en.json
@@ -45,7 +45,8 @@
   },
   "myBus":{
     "title": "My Bus",
-    "eta":"eta"
+    "eta":"eta",
+    "myBusList":"My Bus List"
   },
   "childProfile": {
     "title": "Children profile",
