View on map in my bus page completed, added the list of vehicles of the driver in my profile page and added link to the route display page

--- a/app/i18n/translations/en.json
+++ b/app/i18n/translations/en.json
@@ -74,7 +74,8 @@
     "busNo":"Bus Number"
   },
   "profile": {
-    "details": "My Details"
+    "details": "My Details",
+    "busNo":"Bus Number(s)"
   },
   "holidays": {
     "title": "Holidays",
@@ -101,6 +102,9 @@
 },
  "errors":{
   "noRouteFound":"No Route Found"
+ },
+ "map":{
+  "viewOnMap":"View On Map"
  }
 
 }
