on click of a bus listed all routes of the bus filtered the route by date complete

--- a/app/i18n/translations/en.json
+++ b/app/i18n/translations/en.json
@@ -46,7 +46,9 @@
   "myBus":{
     "title": "My Bus",
     "eta":"eta",
-    "myBusList":"My Bus List"
+    "myBusList":"My Bus List",
+    "scheduleEvery":"Schedule - Every ",
+    "schedule":"Schedule"
   },
   "childProfile": {
     "title": "Children profile",
