applied leaves are shown in the calendar. Bug fixed-cant select already selected dates

--- a/app/i18n/translations/en.json
+++ b/app/i18n/translations/en.json
@@ -107,7 +107,10 @@
     "rfid":"RFID"
 },
   "applyLeave":{
-    "title":"Apply Leave"
+    "title":"Apply Leave",
+    "applyLeaveOn":"Apply leave on",
+    "*":"*",
+    "leaveType":"Leave type"
 },
  "errors":{
   "noRouteFound":"No Route Found"
