start and end stop added in live location

--- a/app/i18n/translations/en.json
+++ b/app/i18n/translations/en.json
@@ -51,6 +51,7 @@
   "myBus":{
     "title": "My Bus",
     "eta":"eta",
+    "ETA":"ETA",
     "myBusList":"My Bus List",
     "scheduleEvery":"Schedule - Every ",
     "schedule":"Schedule",
